# PDFStundenplanApplikation

./: LICENSE  README.md  THIRD-PARTY-LICENSES.md  index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src/css/: dark-mode.css  dark-mode.css.map  dark-mode.scss  light-mode.css  light-mode.css.map  light-mode.scss  main.css  main.css.map  main.scss  style.css
src/html/: index.html
src/script/: DropZoneHandler.js  Environnement.js  darkModeToggle.js  input.js  splitter.js
