[package]
name = "webapp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "webapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.8", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.8", features = ["devtools"] }
tauri-plugin-opener = "2.0.0-rc.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

